--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
    <div class="topo">
-       <h1>DrivenEats</h1>
+       <h1 class="fonte-righteous">DrivenEats</h1>
        <h4>Sua comida em 6 minutos</h4>
    </div>
    <div class="conteudo">
        <div class="pratos">
            <div class="titulo-prato">
-               <h2>Primeiro, seu prato</h2>
+               <h2 class="fonte-righteous">Primeiro, seu prato</h2>
            </div>
            <div class="cards">
             <div class="card">
@@ -67,7 +67,7 @@
        </div>
        <div class="bebidas">
         <div class="titulo-bebida">
-            <h2>Agora, sua bebida</h2>
+            <h2 class="fonte-righteous">Agora, sua bebida</h2>
         </div>
         <div class="cards">
          <div class="card">
@@ -117,7 +117,7 @@
        </div>
        <div class="sobremesas">
         <div class="titulo-sobremesa">
-            <h2>Por fim, sua sobremesa</h2>
+            <h2 class="fonte-righteous">Por fim, sua sobremesa</h2>
         </div>
         <div class="cards">
          <div class="card">
