Ajuste de bordas

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                </div>
            </div>
            <div class="barra-inferior">
-               <button type="button">Selecione os 3 itens
-                para fechar o pedido</button>
+               <button type="button"><p>Selecione os 3 itens</p>
+                <p>fechar o pedido</p> </button>
            </div>
     </div>
 
