Adicionar opções de selecionar bebida e sobremesa

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                         <div class="preco">
                             <span>R$4,90</span>
                         </div>
-                        <div class="cardSelecionado oculto">
-                            <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
-                        </div>
+                    <div class="cardSelecionado oculto">
+                        <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                    </div>
                     </div>
                  </div>
                  <div class="card guarana" onclick="selecionarBebida('guarana')">
@@ -123,9 +123,9 @@
                         <div class="preco">
                             <span>R$3,90</span>
                         </div>
-                        <div class="cardSelecionado oculto">
-                            <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
-                        </div>
+                    <div class="cardSelecionado oculto">
+                        <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                    </div>
                     </div>
                  </div>
                  <div class="card brahma" onclick="selecionarBebida('brahma')">
@@ -142,9 +142,9 @@
                         <div class="preco">
                             <span>R$3,50</span>
                         </div>
-                        <div class="cardSelecionado oculto">
-                            <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
-                        </div>
+                    <div class="cardSelecionado oculto">
+                        <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                    </div>
                     </div>
                  </div>
         
@@ -155,7 +155,7 @@
                     <h2 class="fonte-righteous">Por fim, sua sobremesa</h2>
                 </div>
                 <div class="cards">
-                 <div class="card" onclick="selecionarCard(this)">
+                 <div class="card pudim" onclick="selecionarSobremesa('pudim')">
                      <div class="foto">
                          <img src="https://s3-alpha-sig.figma.com/img/69c2/0177/16f95b6cce396fb4800480789f93d260?Expires=1649635200&Signature=BlGv0lvB-mCgzZo2HS~INNZunwBQ7oLwokaA9k-dRJbvleyPELzUDulFWKDhsBexZKuu~n7PpIi3~a70vniqvqVewRESZRdkmjfooOwF-40iJTvFLHMQ5-~BX8DZd0zaH78~QwzN5CKXISv1r6bMcR5dj8Uh3c95VnHBE-LsFrLvMIWV7vdKCFOuXYgggj9XNkFaMpIK-~fIZq9j~ange42WE6LzEwJEC93E-q0tSMLgJw8BbafF1YDZgROJIUYa2pUOHJTvqD~3p6EU-TaO~8uzQvdqfTYX~tnSPqYSSf094b5wgLmUwQULffqN0DqKnpohU4pSWTx4gKDS0zGlfA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" alt="pudim">
                      </div>
@@ -167,12 +167,14 @@
                      </div>
                      <div class="card-inferior">
                         <div class="preco">
-                            <span>R$14,90</span>
+                            <span>R$7,90</span>
                         </div>
-                        <ion-icon name="checkmark-circle" class="sobremesa selecionar" id="pudim"></ion-icon>
+                    <div class="cardSelecionado oculto">
+                        <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                    </div>
                     </div>
                  </div>
-                 <div class="card" onclick="selecionarCard(this)">
+                 <div class="card mousse" onclick="selecionarSobremesa('mousse')">
                      <div class="foto">
                          <img src="https://th.bing.com/th/id/OIP.HTEkxmm01Egf5WDPWq4JSAHaFk?pid=ImgDet&rs=1" alt="mousse de maracujá">
                      </div>
@@ -184,12 +186,14 @@
                      </div>
                      <div class="card-inferior">
                         <div class="preco">
-                            <span>R$14,90</span>
+                            <span>R$6,90</span>
                         </div>
-                        <ion-icon name="checkmark-circle" class="sobremesa selecionar" id="mousse"></ion-icon>
+                    <div class="cardSelecionado oculto">
+                        <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                    </div>
                     </div>
                  </div>
-                 <div class="card" onclick="selecionarCard(this)">
+                 <div class="card acai" onclick="selecionarSobremesa('acai')">
                      <div class="foto">
                          <img src="https://th.bing.com/th/id/OIP.VFDf5ReCoU9ggMt9tUxoWgHaDP?pid=ImgDet&rs=1" alt="açaí">
                      </div>
@@ -201,9 +205,11 @@
                      </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$14,90</span>
+                                <span>R$9,90</span>
                             </div>
-                            <ion-icon name="checkmark-circle" class="sobremesa selecionar" id="acai"></ion-icon>
+                        <div class="cardSelecionado oculto">
+                            <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
+                        </div>
                         </div>
                  </div>
         
