Adicionar função para enviar o pedido

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             </div>
             <div class="pedido-detalhe">
                 <p class="pedido-bebida">Coca</p>
-                <p class="preco-comida"> 4,90</p>
+                <p class="preco-bebida"> 4,90</p>
             </div>
             <div class="pedido-detalhe  ">
                 <p class="pedido-sobremesa">Pudim</p>
-                <p class="preco-comida">7,90</p>
+                <p class="preco-sobremesa">7,90</p>
             </div>
             <div class="pedido-detalhe total">
                 <p>Total</p>
                 <p>R$ 27,70</p>
             </div>
-            <button>Tudo certo, pode pedir</button>
+            <button class="finalizar-pedido" onclick="enviarPedido()">Tudo certo, pode pedir</button>
             <p onclick="cancelarPedido()">Cancelar</p>
         </div>
         <!-- Topo -->
@@ -80,7 +80,7 @@
                         </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$14,90</span>
+                                <span>R$12,90</span>
                             </div>
                         </div>
                         <div class="cardSelecionado oculto">
@@ -99,7 +99,7 @@
                         </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$14,90</span>
+                                <span>R$17,90</span>
                             </div>
                         </div>
                         <div class="cardSelecionado oculto">
