Ajuste de texto de envio

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <h3 class="titulo-pedido">confirme seu pedido</h3>
             <div class="pedido-detalhe">
                 <p class="pedido-comida">Frango Yin Yang</p>
-                <p class="preco-comida">14,90</p>
+                <p class="preco-comida">14.90</p>
             </div>
             <div class="pedido-detalhe">
                 <p class="pedido-bebida">Coca</p>
-                <p class="preco-bebida"> 4,90</p>
+                <p class="preco-bebida"> 4.90</p>
             </div>
             <div class="pedido-detalhe  ">
                 <p class="pedido-sobremesa">Pudim</p>
-                <p class="preco-sobremesa">7,90</p>
+                <p class="preco-sobremesa">7.90</p>
             </div>
             <div class="pedido-detalhe total">
                 <p>Total</p>
-                <p>R$ 27,70</p>
+                <p class="preco-total">R$ 27,70</p>
             </div>
             <button class="finalizar-pedido" onclick="enviarPedido()">Tudo certo, pode pedir</button>
             <p onclick="cancelarPedido()">Cancelar</p>
@@ -58,7 +58,7 @@
                         </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$14,90</span>
+                                <span>R$14.90</span>
                             </div>
                             
                         </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$12,90</span>
+                                <span>R$12.90</span>
                             </div>
                         </div>
                         <div class="cardSelecionado oculto">
@@ -99,7 +99,7 @@
                         </div>
                         <div class="card-inferior">
                             <div class="preco">
-                                <span>R$17,90</span>
+                                <span>R$17.90</span>
                             </div>
                         </div>
                         <div class="cardSelecionado oculto">
@@ -127,7 +127,7 @@
                     </div>
                     <div class="card-inferior">
                     <div class="preco">
-                        <span>R$4,90</span>
+                        <span>R$4.90</span>
                     </div>
                 <div class="cardSelecionado oculto">
                     <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="card-inferior">
                     <div class="preco">
-                        <span>R$3,90</span>
+                        <span>R$3.90</span>
                     </div>
                     <div class="cardSelecionado oculto">
                         <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="card-inferior">
                     <div class="preco">
-                        <span>R$3,50</span>
+                        <span>R$3.50</span>
                     </div>
                     <div class="cardSelecionado oculto">
                         <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
@@ -192,7 +192,7 @@
                     </div>
                     <div class="card-inferior">
                     <div class="preco">
-                        <span>R$7,90</span>
+                        <span>R$7.90</span>
                     </div>
                     <div class="cardSelecionado oculto">
                         <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="card-inferior">
                     <div class="preco">
-                        <span>R$6,90</span>
+                        <span>R$6.90</span>
                     </div>
                 <div class="cardSelecionado oculto">
                     <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="card-inferior">
                         <div class="preco">
-                            <span>R$9,90</span>
+                            <span>R$9.90</span>
                         </div>
                     <div class="cardSelecionado oculto">
                         <ion-icon name="checkmark-circle" class="bebida" ></ion-icon>
